--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+    <include layout="@layout/layout_main" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/main_navigation"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
+        android:layout_gravity="left"
+        android:fitsSystemWindows="true"
         app:headerLayout="@layout/layout_navigation_header"
-        app:menu="@menu/main_navigation" />
+        app:menu="@menu/main_navigation"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <include layout="@layout/layout_main" />
 </android.support.v4.widget.DrawerLayout>
