--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -16,6 +16,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:navigationIcon="@drawable/navigationview"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:title="YeeLL" />
 
         <android.support.design.widget.TabLayout
