--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,9 @@
 
     <color name="white">#ffffff</color>
     <color name="tablayout_text">#db3937</color>
-    <color name="new_profile_task_text">#555555</color>
+    <color name="text_color_name">#555555</color>
+    <color name="text_light_grey">#8b8b8b</color>
+    <color name="text_grey">#bfbfbf</color>
+    <color name="text_item_topic_title_">#4d4d4d</color>
+    <color name="text_item_topic_desc">#999999</color>
 </resources>
